<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context=".MainActivity"
    android:background="#ffd8eeff"
    >

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/nano_welcome"
      android:paddingBottom="30dp"
      android:textSize="25sp"
      android:textColor="#ff26254e"
      android:textStyle="normal"
      />

  <Button
      android:id="@+id/spotify_button"
      android:layout_width="@dimen/main_button_width"
      android:layout_height="@dimen/main_button_height"
      android:text="@string/spotify_name"
      android:background="#F08C35"
      android:layout_margin="@dimen/main_button_margin"
      android:onClick="mainButtonClick"
      />
  <Button
      android:id="@+id/scores_button"
      android:layout_width="@dimen/main_button_width"
      android:layout_height="@dimen/main_button_height"
      android:text="@string/scores_name"
      android:background="#F08C35"
      android:layout_margin="@dimen/main_button_margin"
      android:onClick="mainButtonClick"
      />
  <Button
      android:id="@+id/library_button"
      android:layout_width="@dimen/main_button_width"
      android:layout_height="@dimen/main_button_height"
      android:text="@string/library_name"
      android:background="#F08C35"
      android:layout_margin="@dimen/main_button_margin"
      android:onClick="mainButtonClick"
      />
  <Button
      android:id="@+id/build_it_button"
      android:layout_width="@dimen/main_button_width"
      android:layout_height="@dimen/main_button_height"
      android:text="@string/build_it_name"
      android:background="#F08C35"
      android:layout_margin="@dimen/main_button_margin"
      android:onClick="mainButtonClick"
      />
  <Button
      android:id="@+id/xyz_button"
      android:layout_width="@dimen/main_button_width"
      android:layout_height="@dimen/main_button_height"
      android:text="@string/xyz_name"
      android:background="#F08C35"
      android:layout_margin="@dimen/main_button_margin"
      android:onClick="mainButtonClick"
      />
  <Button
      android:id="@+id/capstone_button"
      android:layout_width="@dimen/main_button_width"
      android:layout_height="@dimen/main_button_height"
      android:text="@string/capstone_name"
      android:background="#ffbd3a1e"
      android:textColor="#ffffffff"
      android:layout_margin="@dimen/main_button_margin"
      android:onClick="mainButtonClick"
      />
</LinearLayout>
